--- a/www/pasta_diet/index.html
+++ b/www/pasta_diet/index.html
@@ -10,11 +10,12 @@
 <meta name="copyright" content="" />
 <meta name="robots" content="index, follow" />
 <meta name="author" content="" />
-<link href="/shared/css/import.css" rel="stylesheet" type="text/css" media="screen,print" />
-<script type="text/javascript" src="/shared/js/jquery.js"></script>
-<script type="text/javascript" src="/shared/js/default.js" ></script>
-<script type="text/javascript" src="/shared/js/switchtab.js"></script>
-<script type="text/javascript" src="/shared/js/peoplerecipe.js"></script>
+<link href="../shared/css/import.css" rel="stylesheet" type="text/css" media="screen,print" />
+<link href="css/diet.css" rel="stylesheet" type="text/css" media="screen,print" />
+<script type="text/javascript" src="../shared/js/jquery.js"></script>
+<script type="text/javascript" src="../shared/js/default.js" ></script>
+<script type="text/javascript" src="../shared/js/switchtab.js"></script>
+<script type="text/javascript" src="../shared/js/peoplerecipe.js"></script>
 <script type="text/javascript">
 <!--
 window.onload = function() {
@@ -25,7 +26,7 @@ window.onload = function() {
 //-->
 </script>
 </head>
-<body id="home">
+<body>
 <div id="page">
 <div class="pageBt">
 	<div id="header">
@@ -33,101 +34,157 @@ window.onload = function() {
 		<!--#include virtual="/include/inc_gnavi.html"-->
 	</div>
 	<!-- / header -->
-	<div id="mainArea">
-		<div id="contents">
-			<div id="main_column">
-				<div id="search_block">
-					<h2><img src="/images/h2_search.gif" width="497" height="40" alt="おいしいレシピが2000種類以上！" /></h2>
-					<div class="search_method_01">
-						<form onsubmit="goToSearch(); return false;">
-							<dl class="clearfix">
-								<dt><img src="/images/method_dt_01.gif" width="131" height="18" alt="フリーワードで探す" /></dt>
-								<dd class="clearfix">
-									<input id="keyword" name="keyword" type="text" />
-									<input id="submit" type="image" src="/images/index_btn_search03.gif" alt="検索" />
-								</dd>
-							</dl>
-							<ul class="clearfix">
-								<li><input id="inBoth" type="radio" checked="checked" name="radio1" /><label for="inBoth">両方のレシピから探す</label></li>
-								<li><input id="inPro" type="radio" name="radio1" /><label for="inPro">パスタ協会オフィシャルレシピから探す</label></li>
-								<li><input id="inMember" type="radio" name="radio1" /><label for="inMember">みんなの投稿パスタレシピから探す</label></li>
-							</ul>
-						</form>
-					</div>
-					<div class="search_method_02">
-						<dl class="clearfix">
-							<dt><img src="/images/method_dt_02.gif" width="133" height="18" alt="パスタソースで探す" /></dt>
-							<dd>
-								<ul class="clearfix">
-									<li class="list_01"><a href="/recipe/category/1/01/0000/01/">オイル系</a></li>
-									<li class="list_02"><a href="/recipe/category/1/02/0000/01/">トマト系</a></li>
-									<li class="list_03"><a href="/recipe/category/1/03/0000/01/">クリーム系</a></li>
-									<li class="list_04"><a href="/recipe/category/1/04/0000/01/">和風</a></li>
-									<li class="list_05"><a href="/recipe/category/1/99/0000/01/">その他</a></li>
-								</ul>
-							</dd>
-						</dl>
-					</div>
-					<div class="search_method_03 clearfix">
-						<p><a href="/recipe/index.php">もっと詳しい条件で探す</a></p>
-					</div>
-				</div><!-- /search_block -->
+    <p class="location"><a href="/index.html">HOME</a> ＞ <a href="/event/school/index.html">イベント情報を知る</a> ＞ パスタレシピコンテスト</p>
+    <div id="diet">
+    	<div id="mainArea">
+    		<div id="main_column">
+                <div class="main_image">
+                    <img src="images/main_image.png" alt="誤解していませんか？「パスタ ＝ 太る」 大好きなパスタでおいしくダイエット" />
+                </div>
 
-				<!--#include virtual="/include/inc_top_banner_l.html"-->
+                <div class="text-heading">
+                    <h2>“パスタは太る”。7割の女性が思い込み</h2>
+                    <p class="mb30">女性を中心に人気のパスタ。皆さんは普段どれくらい食べていますか。いまや日本人の約3人に１人が週1回以上の頻度で食べているという回答が得られました。それほど私たちの生活に入り込んでいるパスタですが、一方で、大きく誤解されている点があります。<br>それは、「パスタは太りやすい」ということ。</p>
+                    <p>日本パスタ協会では、“過去3年以内にダイエットを試みた”20～50代女性400人を対象にアンケートを実施。その中で「パスタは高カロリーで太りやすい」と思うか、と訊ねたところ、実に約7割の女性が「そう思う」と回答しています。<br>しかし、それは大きな誤解なのです。適切な食べ方を知っていれば、パスタは実に理想のダイエット食材なのです。</p>
+                </div>
 
-				<div id="recommend_recipe">
-					<div id="recipe_photo"><p><a href="/recipe/recipe.php?recipe_id=00417"><img src="/recipe/images/recipe_photo/recipe_photo00417.jpg" height="211" alt="" /></a></p></div>
-					<div id="recipe_info">
-						<h2><img src="/images/h2_recommend.gif" width="328" height="83" alt="毎月更新！協会おすすめレシピ" /></h2>
-						<div class="recipe_description">
-							<p><a href="/recipe/recipe.php?recipe_id=00417">サルシッチャとトマトソースのペンネ</a></p>
-							<p>濃厚なうまみのサルシッチャをトマトソースと合わせて</p>
-						</div>
-						<div id="before_recipe" class="clearfix">
-							<div id="before_recipe_photo"><p><a href="/recipe/recipe.php?recipe_id=416"><img src="/recipe/images/recipe_photo_s/recipe_photo_s00416.jpg" width="70" height="90" alt="" /></a></p></div>
-							<div id="before_recipe_info">
-								<h3><img src="/images/h3_before_recipe.gif" width="270" height="44" alt="先月の協会おすすめレシピ" /></h3>
-								<div class="recipe_description">
-									<p><a href="/recipe/recipe.php?recipe_id=416">ひよこ豆のスープパスタ</a></p>
-									<p>シンプルな味つけで、豆の風味が広がるやさしい味わい</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div><!-- /recommend_recipe -->
-				<!--#include virtual="/include/inc_top_banner.html"-->
-				<!--#include virtual="/recipe_ranking_top.html"-->
-				<div id="middle_contents" class="clearfix">
-					<div id="new_post_block" class="clearfix">
-						<h2><img src="/images/h2_post.gif" width="292" height="37" alt="新着投稿レシピ" /></h2>
-						<div class="left_block new_post">
-							<p><a href="/recipe/member_recipe.php?cmd=DispDetail&recipe_id=2370"><img src="/recipe/member_recipe_img/img_00002370.jpg" id="new_recipe_image" alt="" /></a><span>NEW！</span></p>
-						</div>
-						<div class="right_block new_post">
-							<p class="recipe_name"><a href="/recipe/member_recipe.php?cmd=DispDetail&recipe_id=2370">ナスとムール貝のパスタ</a></p>
-							<p class="recipe_author">by <a href="/recipe/member_recipe.php?cmd=ListUpByMember&member_id=1000">ototototo</a></p>
-							<p class="recipe_text">殆どムール貝が支配します</p>
-							<p class="others_recipe"><a href="/recipe/member_recipe.php?cmd=SearchDone&u=1&page=1&search=keyword&keyword="><img src="/images/btn_post_recipe_off.gif" class="swap" width="128" height="24" alt="その他の投稿レシピ" /></a></p>
-						</div>
-					</div>
-					<div id="dietitian_block">
-						<h2><img src="/images/h2_dietitian.gif" width="302" height="26" alt="学校給食向けレシピ" /></h2>
-						<ul>
-							<li><a href="/dietitian/index.html">学校給食向けパスタレシピとは？</a></li>
-							<li><a href="/dietitian/recipe/index.html">学校給食向けレシピ一覧</a></li>
-						</ul>
-					</div>
-				</div><!-- /content_block -->
-			</div><!-- /main_column -->
-			<div id="sub_column">
-				<!--#include virtual="/include/inc_top_side_contents.html"-->
-				<!--#include virtual="/include/inc_top_info.html"-->
-			</div>
-		</div>
-		<!--#include virtual="/include/inc_footer_link.html"-->
-		<!-- / contents -->
-		<p class="pagetop"><a href="#header"><img src="/shared/images/btn_pagetop_rody_off.gif" alt="このページのトップへ" width="108" height="16" class="swap" /></a></p>
-		<!-- / sub -->
+                <div class="hr-block"></div>
+
+                <div class="diet-section pink">
+                    <h3>女性のダイエット成功率は？</h3>
+                    <p class="mb30">さて、現代女性の永遠のテーマになりつつあるダイエット。まず初めに、実際にダイエットに挑戦した女性たちの“ダイエット成功率”について触れてみます。</p>
+                    <p class="image"><img src="images/diet_img_01.png" alt="女性のダイエット目標の達成度合い ダイエット後のリバウンド経験" /></p>
+                    <p class="quote mb30">日本パスタ協会調べ（n=440）</p>
+                    <p>それによると、ダイエット目標に対して、「ほぼ達成できた」、「まあ、達成できた」と回答した人の割合は、全体で39.8%。裏を返せば、6割の女性たちは自分の掲げた目標に至っていないということです。また、リバウンドについては、全体の約7割が(経験が)「ある」との回答でした。少し掘り下げてみると、年代が上がるほどリバウンドする割合が高くなる傾向が表れました。</p>
+                </div>
+
+                <div class="hr-block"></div>
+
+                <div class="diet-section orange">
+                    <h3>炭水化物とダイエットの関係</h3>
+                    <p class="mb30">言うまでもなく、パスタは炭水化物に分類される食材。ちなみに今回、「好きな炭水化物」を訊ねたところ、パン（71.1%）に続き、パスタ（68.0%）は堂々の2位でした。</p>
+                    <p class="image"><img src="images/diet_img_02.png" alt="好きな炭水化物" /></p>
+                    <p class="quote mb30">日本パスタ協会調べ（n=440）</p>
+                    <p class="mb30">炭水化物は、たんぱく質、脂質と並んで三大栄養素に数えられます。“三大”に選ばれるには、それなりに理由があります。<br>基本的に“炭水化物=糖質”と考えても差し支えありません。糖質は、簡単に言うと、脳と身体を動かす“燃料”で、脳を働かせる唯一のエネルギー源なのです。皆さんも経験があると思いますが、ご飯を抜くと頭がボォーとしたり、疲れた時には甘いものを食べろと言われたりするのも、そのためです。
+                    <p class="mb30">ヒトは糖質の大部分を炭水化物の形で取り入れています。そのことで、私たちは炭水化物を“ダイエットの敵”と誤解してしまいます。今回のアンケートで、“ダイエット期間中の食事内容と、その時の気分”を自由回答で募ったところ、“炭水化物を控えて”という記述が多く見られました。そして、「物足りない」、「満足感がない」、「苦行だった」等の言葉が続いていました。<br>ダイエット中に糖質制限をした女性と、しなかった女性の“空腹感”を比較してみました。それが以下のグラフです。</p>
+                    <p class="image"><img src="images/diet_img_03.png" alt="ダイエット中の糖質制限と空腹経験の関係" /></p>
+                    <p class="quote pr85 mb30"><span>※糖質制限ダイエット未経験者の中には、糖質に限定せず、摂取する食事量自体を減らしている人も含まれる。</span><br>日本パスタ協会調べ（n=440）</p>
+                    <p class="image"><img src="images/diet_img_04.png" alt="ダイエット中の糖質制限とリバウンド" /></p>
+                    <p class="quote pr85 mb30"><span>※糖質制限ダイエット未経験者の中には、糖質に限定せず、摂取する食事量自体を減らしている人も含まれる。</span><br>日本パスタ協会調べ（n=440）</p>
+                    <p>これで見ると、“空腹感”を覚えた割合で、糖質摂取を制限したダイエット経験者の方が、制限しなかった人たちよりも、8.5ポイント高いスコアになっています。また、リバウンドとの関係では、「未経験者」よりも7.0ポイント、リバウンド率が高い結果でした。<br>糖質の制限度合いにも因りますが、過度な制限を前提としたダイエットは空腹感を抱え、大きなストレスになっているようです。そして結局はリバウンドにつながってしまうと言えそうです。<br>ここで考えたいのは、試合前の減量に挑むボクサーと違い、ダイエットは決して一過性のものではないということです。ダイエットとは、一生の習慣として継続できなければ意味がないのではないでしょうか。空腹を抱え、脳が働かない日々を続けるダイエットは、精神的にも肉体的にも何のメリットもないということです。</p>
+                </div>
+
+                <div class="hr-block"></div>
+
+                <div class="diet-section blue">
+                    <h3>肥満防止のためのインシュリン・コントロール</h3>
+                    <p class="mb30">肥満のメカニズムを簡単におさらいしてみます。</p>
+                    <p class="image mb30"><img src="images/diet_img_05.png" alt="" /></p>
+                    <p class="mb30">これが蓄積され続けると肥満になります。</p>
+                    <p class="mb30">このメカニズムからもわかるように、肥満防止で気を付けるべきは、インシュリンの分泌を如何にコントロールするかという点。そしてインシュリンの分泌に大きく関ってくるのが、“血糖値の上昇速度”です。急激に血糖値が上がると、インシュリンが大量に分泌され、その結果、糖がエネルギーとして消費されないうちに脂肪細胞へと送り込まれ、蓄積されていくということです。<br>逆に言えば、ゆっくり血糖値を上げればインシュリンの分泌は抑えられ、余計な糖を溜め込まずに済むという訳です。<br>
+                    ですから、ダイエットではインシュリンのコントロールが重要になってきます。そのためには、血糖値をゆっくりと上昇させる炭水化物を摂取することが求められます。それがパスタなのです。</p>
+                    <p class="mb30">血糖値が上昇するスピードを測定したものをGI(グリセミック・インデックス) 値と言います。以下が各主食類のGI値です。ご覧いただいてわかるように、他の主食類と比較して、パスタが低い値であることがわかりますね。ちなみに、このスコアは朝食シリアル、ライ麦粉パン、リンゴなど同等です。</p>
+                    <p class="image mb30"><img src="images/diet_img_06.png" alt="" /></p>
+                    <p>パスタの場合、同じ炭水化物である白米、パン、うどんと比較しても、血糖になるまでの消化がゆっくりと進むので、血糖値が急激に上がることがなく、そのため、過度なインシュリンの分泌がなされることがありません。その点からも、パスタはダイエット向きの食材といえるのです。</p>
+                </div>
+
+                <div class="hr-block"></div>
+
+                <div class="diet-section pink">
+                    <h3>効率的なエネルギー代謝で健康ダイエット</h3>
+                    <p class="image mb30"><img src="images/diet_img_07.jpg" alt="" /></p>
+                    <p class="mb30">皆さんの最も身近なパスタと言えば、“乾燥パスタ”。その原料は、「デュラムセモリナ」という小麦粉です。余談ですが、デュラム」は小麦の品種名、「セモリナ」は “粉の挽き方”で“粗びき”を表しています。デュラムセモリナは、パンやうどんに使用されている小麦とはまったく性質が異なり、粒が固く、粒子が大きい特徴です。</p>
+                    <p class="mb30">さて、この小麦は、ダイエットや運動に極めて密接に関係している糖質、たんぱく質、ビタミンB群の3つの栄養素を豊富に含んでいます。<br>まず、筋肉の主な材料がたんぱく質であることは、ご存知の方も多いと思います。エクササイズに勤しむ人やアスリートも、筋肉を成長させるために、プロテイン(たんぱく質)を摂取している光景はもはや当たり前と言っていいでしょう。しかし、たんぱく質を体内に吸収するには、アミノ酸に分解する必要があります。その際に欠かせないのがビタミンB群です。糖質は直接筋肉を作り上げる栄養素ではありませんが、筋肉を動かすエネルギーとなります。動かすことで筋肉は成長し、身体の効率的な代謝促進へとつながっていきます。この他、パスタは日本人に不足しがちな鉄分・カルシウム(お米の3倍)、さらに食物繊維も多く含んでいる健康食材と言えます。</p>
+                    <p>また、うどんや蕎麦と違い、パスタは“噛んで食べる” 麺。そのため満腹中枢が刺激されて食べすぎを防ぐことができます。これで苦行のような“空腹感”を抱えたダイエットから解放されますね。<br>パスタは消化吸収が緩やかなだけでなく、効率的なエネルギー代謝を促す栄養成分を含む食材だと言えます。</p>
+                </div>
+
+                <div class="hr-block"></div>
+
+                <div class="diet-section blue">
+                    <h3>パスタでおいしくダイエット</h3>
+                    <p class="mb30">以上のように、栄養価の点からも、パスタが優れたダイエット食材であることがご理解していただけましたか。<br>最後に、健康的にダイエットを目指す皆さんに向け、パスタ協会が厳選したおいしいパスタ・メニューをご紹介します。<br>つらく苦しいダイエットから、明るくおいしいダイエットへ向け、パスタを上手に活用してください。</p>
+
+                    <p class="recipe-heading"><img src="images/recipe-heading.png" alt="healthy recipes" /></p>
+                    <p class="heading-text">
+                        <img src="images/recipe-icon_01.png" alt="厳選！" /> パスタ協会推薦。ヘルシーパスタ・レシピ<br><span>(※450Kカロリー以下)</span>
+                    </p>
+                    <ul class="mb30">
+                        <li>
+                            <p class="recipe-image"><img src="images/menu_img_01.jpg" alt="" /></p>
+                            <p><a href="#">桃とトマトの冷製スパゲッティ</a></p>
+                        </li>
+                        <li>
+                            <p class="recipe-image"><img src="images/menu_img_02.jpg" alt="" /></p>
+                            <p><a href="#">えんどう豆のスープパスタ</a></p>
+                        </li>
+                        <li>
+                            <p class="recipe-image"><img src="images/menu_img_03.jpg" alt="" /></p>
+                            <p><a href="#">ホワイトアスパラと半熟卵のペンネ</a></p>
+                        </li>
+                        <li>
+                            <p class="recipe-image"><img src="images/menu_img_04.jpg" alt="" /></p>
+                            <p><a href="#">マカロニと野菜のトマトグラタン</a></p>
+                        </li>
+                        <li>
+                            <p class="recipe-image"><img src="images/menu_img_05.jpg" alt="" /></p>
+                            <p><a href="#">くたくたに煮た芽キャベツのスパゲッティ</a></p>
+                        </li>
+                        <li>
+                            <p class="recipe-image"><img src="images/menu_img_06.jpg" alt="" /></p>
+                            <p><a href="#">ゴーヤとツナのエスニック風サラダパスタ</a></p>
+                        </li>
+                        <li>
+                            <p class="recipe-image"><img src="images/menu_img_07.jpg" alt="" /></p>
+                            <p><a href="#">スープカレーパスタ</a></p>
+                        </li>
+                        <li>
+                            <p class="recipe-image"><img src="images/menu_img_08.jpg" alt="" /></p>
+                            <p><a href="#">めかぶとオクラのとろとろパスタ</a></p>
+                        </li>
+                        <li>
+                            <p class="recipe-image"><img src="images/menu_img_09.jpg" alt="" /></p>
+                            <p><a href="#">トマトとたこのピリ辛ペンネ</a></p>
+                        </li>
+                        <li>
+                            <p class="recipe-image"><img src="images/menu_img_10.jpg" alt="" /></p>
+                            <p><a href="#">ししとうと鶏そぼろのパスタ</a></p>
+                        </li>
+                    </ul>
+                    <p class="other-txt"><span>これ以外にも、<a href="/">日本パスタ協会公式サイト</a>では、2000種以上のパスタ・レシピを大公開。</span></p>
+                </div>
+
+                <div class="investigation-area">
+                    <h4>調査概要</h4>
+                    <dl>
+                        <dt>調査タイトル：</dt>
+                        <dd>ライフスタイルに関するアンケート</dd>
+                    </dl>
+                    <dl>
+                        <dt>調査期間：</dt>
+                        <dd>2016年8月5日～8月12日</dd>
+                    </dl>
+                    <dl>
+                        <dt>調査方法：</dt>
+                        <dd>インターネットリサーチ</dd>
+                    </dl>
+                    <dl>
+                        <dt>サンプル数：</dt>
+                        <dd>440名</dd>
+                    </dl>
+                    <dl>
+                        <dt>調査対象：</dt>
+                        <dd>直近3年以内に、美容や健康を目的に何らかのダイエットを試みたことのある20代～40代女性</dd>
+                    </dl>
+                </div>
+    		</div><!-- /main_column -->
+    		<!--#include virtual="/include/inc_footer_link.html"-->
+            <div class="btmLink">
+                <p class="back"><a href="javascript:history.back();"><img src="../shared/images/btn_back_off.gif" alt="戻る" width="36" height="13" class="swap" /></a></p>
+                <p class="pagetop"><a href="#header"><img src="../shared/images/btn_pagetop_rody_off.gif" alt="このページのトップへ" width="108" height="16" class="swap" /></a></p>
+            </div>
+    		<!-- / sub -->
+        </div>
+        <!-- / diet -->
 	</div>
 	<!-- / mainArea -->
 	<!--#include virtual="/include/inc_footer.html"-->
