読み込むテンプレートを変更

--- a/www/pasta_diet/index.html
+++ b/www/pasta_diet/index.html
@@ -30,7 +30,7 @@ window.onload = function() {
 <div id="page">
 <div class="pageBt">
 	<div id="header">
-		<!--#include virtual="/include/inc_header_top.html"-->
+		<!--#include virtual="/include/inc_header.html"-->
 		<!--#include virtual="/include/inc_gnavi.html"-->
 	</div>
 	<!-- / header -->
