指摘事項修正

--- a/www/pasta_diet/index.html
+++ b/www/pasta_diet/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS" />
 <meta name="Keywords" content="パスタ,パスタレシピ,パスタメニュー,ゆで方,おいしい作り方,クッキングスクール,スパゲッティ,スパゲティ" />
 <meta name="Description" content="日本パスタ協会の公式サイト。ご家庭で簡単に作れるパスタレシピを毎週、様々な切り口でご紹介。その他、自分の好みのパスタを探せる検索機能や、自分のオリジナルレシピをみんなに紹介できるパスタレシピ投稿ページ、パスタクッキングスクールのご案内など、パスタの楽しみ方を広げられるサイトです。" />
-<title>日本パスタ協会｜パスタのレシピ情報満載！</title>
+<title>大好きなパスタでおいしくダイエット｜日本パスタ協会</title>
 <meta http-equiv="Content-Script-Type" content="text/javascript" />
 <meta http-equiv="Content-Style-Type" content="text/css" />
 <meta name="copyright" content="" />
@@ -34,7 +34,7 @@ window.onload = function() {
 		<!--#include virtual="/include/inc_gnavi.html"-->
 	</div>
 	<!-- / header -->
-    <p class="location"><a href="/index.html">HOME</a> ＞ <a href="/event/school/index.html">イベント情報を知る</a> ＞ パスタレシピコンテスト</p>
+    <p class="location"><a href="/index.html">HOME</a> ＞ 大好きなパスタでおいしくダイエット</p>
     <div id="diet">
     	<div id="mainArea">
     		<div id="main_column">
