指摘箇所修正

--- a/www/pasta_diet/index.html
+++ b/www/pasta_diet/index.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ja">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS" />
-<meta name="Keywords" content="パスタ,パスタレシピ,パスタメニュー,ゆで方,おいしい作り方,クッキングスクール,スパゲッティ,スパゲティ" />
-<meta name="Description" content="日本パスタ協会の公式サイト。ご家庭で簡単に作れるパスタレシピを毎週、様々な切り口でご紹介。その他、自分の好みのパスタを探せる検索機能や、自分のオリジナルレシピをみんなに紹介できるパスタレシピ投稿ページ、パスタクッキングスクールのご案内など、パスタの楽しみ方を広げられるサイトです。" />
-<title>大好きなパスタでおいしくダイエット｜日本パスタ協会</title>
+<meta name="Keywords" content="パスタ,太る,ダイエット,肥満防止,血糖値,インシュリン,炭水化物,リバウンド,糖質制限,GI値,健康,デュラムセモリナ,パスタレシピ,低カロリー,アンケート" />
+<meta name="Description" content="「パスタ＝太る」は大きな誤解です。適切な食べ方を知っていれば、パスタは実に理想のダイエット食材になります。大好きなパスタで美味しくダイエットしましょう。" />
+<title>大好きなパスタでおいしくダイエット</title>
 <meta http-equiv="Content-Script-Type" content="text/javascript" />
 <meta http-equiv="Content-Style-Type" content="text/css" />
 <meta name="copyright" content="" />
@@ -74,7 +74,9 @@ window.onload = function() {
                     <p>これで見ると、“空腹感”を覚えた割合で、糖質摂取を制限したダイエット経験者の方が、制限しなかった人たちよりも、8.5ポイント高いスコアになっています。また、リバウンドとの関係では、「未経験者」よりも7.0ポイント、リバウンド率が高い結果でした。<br>糖質の制限度合いにも因りますが、過度な制限を前提としたダイエットは空腹感を抱え、大きなストレスになっているようです。そして結局はリバウンドにつながってしまうと言えそうです。<br>ここで考えたいのは、試合前の減量に挑むボクサーと違い、ダイエットは決して一過性のものではないということです。ダイエットとは、一生の習慣として継続できなければ意味がないのではないでしょうか。空腹を抱え、脳が働かない日々を続けるダイエットは、精神的にも肉体的にも何のメリットもないということです。</p>
                 </div>
 
-                <div class="hr-block"></div>
+                <div class="hr-block">
+                    <p><a href="https://www.pasta.or.jp/movie_pastafordiet/">【関連動画】「パスタは太る？？その思い込みがひっくり返る！！」</a></p>
+                </div>
 
                 <div class="diet-section blue">
                     <h3>肥満防止のためのインシュリン・コントロール</h3>
@@ -111,43 +113,43 @@ window.onload = function() {
                     <ul class="mb30">
                         <li>
                             <p class="recipe-image"><img src="images/menu_img_01.jpg" alt="" /></p>
-                            <p><a href="#">桃とトマトの冷製スパゲッティ</a></p>
+                            <p><a href="https://www.pasta.or.jp/recipe/recipe.php?recipe_id=402">桃とトマトの冷製スパゲッティ</a></p>
                         </li>
                         <li>
                             <p class="recipe-image"><img src="images/menu_img_02.jpg" alt="" /></p>
-                            <p><a href="#">えんどう豆のスープパスタ</a></p>
+                            <p><a href="https://www.pasta.or.jp/recipe/recipe.php?recipe_id=388">えんどう豆のスープパスタ</a></p>
                         </li>
                         <li>
                             <p class="recipe-image"><img src="images/menu_img_03.jpg" alt="" /></p>
-                            <p><a href="#">ホワイトアスパラと半熟卵のペンネ</a></p>
+                            <p><a href="https://www.pasta.or.jp/recipe/recipe.php?recipe_id=324">ホワイトアスパラと半熟卵のペンネ</a></p>
                         </li>
                         <li>
                             <p class="recipe-image"><img src="images/menu_img_04.jpg" alt="" /></p>
-                            <p><a href="#">マカロニと野菜のトマトグラタン</a></p>
+                            <p><a href="https://www.pasta.or.jp/recipe/recipe.php?recipe_id=372">マカロニと野菜のトマトグラタン</a></p>
                         </li>
                         <li>
                             <p class="recipe-image"><img src="images/menu_img_05.jpg" alt="" /></p>
-                            <p><a href="#">くたくたに煮た芽キャベツのスパゲッティ</a></p>
+                            <p><a href="https://www.pasta.or.jp/recipe/recipe.php?recipe_id=397">くたくたに煮た芽キャベツのスパゲッティ</a></p>
                         </li>
                         <li>
                             <p class="recipe-image"><img src="images/menu_img_06.jpg" alt="" /></p>
-                            <p><a href="#">ゴーヤとツナのエスニック風サラダパスタ</a></p>
+                            <p><a href="https://www.pasta.or.jp/recipe/recipe.php?recipe_id=288">ゴーヤとツナのエスニック風サラダパスタ</a></p>
                         </li>
                         <li>
                             <p class="recipe-image"><img src="images/menu_img_07.jpg" alt="" /></p>
-                            <p><a href="#">スープカレーパスタ</a></p>
+                            <p><a href="https://www.pasta.or.jp/recipe/recipe.php?recipe_id=358">スープカレーパスタ</a></p>
                         </li>
                         <li>
                             <p class="recipe-image"><img src="images/menu_img_08.jpg" alt="" /></p>
-                            <p><a href="#">めかぶとオクラのとろとろパスタ</a></p>
+                            <p><a href="https://www.pasta.or.jp/recipe/recipe.php?recipe_id=185">めかぶとオクラのとろとろパスタ</a></p>
                         </li>
                         <li>
                             <p class="recipe-image"><img src="images/menu_img_09.jpg" alt="" /></p>
-                            <p><a href="#">トマトとたこのピリ辛ペンネ</a></p>
+                            <p><a href="https://www.pasta.or.jp/recipe/recipe.php?recipe_id=275">トマトとたこのピリ辛ペンネ</a></p>
                         </li>
                         <li>
                             <p class="recipe-image"><img src="images/menu_img_10.jpg" alt="" /></p>
-                            <p><a href="#">ししとうと鶏そぼろのパスタ</a></p>
+                            <p><a href="https://www.pasta.or.jp/recipe/recipe.php?recipe_id=286">ししとうと鶏そぼろのパスタ</a></p>
                         </li>
                     </ul>
                     <p class="other-txt"><span>これ以外にも、<a href="/">日本パスタ協会公式サイト</a>では、2000種以上のパスタ・レシピを大公開。</span></p>
