テキストリンク追加

--- a/www/smt/movie_pastafordiet/index.html
+++ b/www/smt/movie_pastafordiet/index.html
@@ -66,6 +66,11 @@ $(function(){
                     <iframe width="280" height="157" src="https://www.youtube.com/embed/jkgz6W6tE5g" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
+
+            <div class="text-link-area">
+                <p>【関連記事】</p>
+                <p><a href="https://www.pasta.or.jp/pasta_diet/">「誤解していませんか？「パスタ＝太る」大好きなパスタでおいしくダイエット」</a></p>
+            </div>
         </div><!-- /main_column -->
 	</div>
 
