--- a/www/movie_pastafordiet/index.html
+++ b/www/movie_pastafordiet/index.html
@@ -55,6 +55,11 @@ window.onload = function() {
                         <iframe width="800" height="450" src="https://www.youtube.com/embed/jkgz6W6tE5g" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </div>
+
+                <div class="text-link-area">
+                    <p>【関連記事】</p>
+                    <p><a href="https://www.pasta.or.jp/pasta_diet/">「誤解していませんか？「パスタ＝太る」大好きなパスタでおいしくダイエット」</a></p>
+                </div>
     		</div><!-- /main_column -->
     		<!--#include virtual="/include/inc_footer_link.html"-->
             <div class="btmLink">
